Added customers section

--- a/css/style.css
+++ b/css/style.css
@@ -386,4 +386,45 @@ footer {
   margin-left: 20px;
 }
 
+.customers {
+  background-color: #403E3B;
+  padding: 100px 15px;
+}
+
+.customers__info {
+  max-width: 450px;
+}
+
+.customers__subtitle {
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  color: #ECE7E4;
+}
+
+.customers__title {
+  color: #FFFFFF;
+  margin-bottom: 14px;
+}
+
+.customers__text {
+  color: #ECE7E4;
+  margin-bottom: 27px;
+}
+
+.customers_logos {
+  max-width: 448px;
+  flex-wrap: wrap;
+  align-content: space-between;
+  align-items: center;
+}
+
+.customers_logo {
+  max-width: 128px;
+  margin-right: 96px;
+}
+.customers_logo img {
+  display: block;
+  width: 100%;
+}
+
 /*# sourceMappingURL=style.css.map */
