--- a/css/style.scss
+++ b/css/style.scss
@@ -18,3 +18,4 @@
 @import "./blocks/contact"; //contact
 @import "./blocks/footer"; //footer
 @import "./blocks/social";
+@import "./blocks/customers";
