--- a/css/base/variables.scss
+++ b/css/base/variables.scss
@@ -8,4 +8,11 @@ $container-main: 1168px;
 $container-quote: 768px;
 // Colors
 $black: #1B1A1A;
+$white: #FFFFFF;
 $brown-text: #645C55;
+$brown-title: #403E3B;
+$bg-white: #F7F7F7;
+$bg-customers: #403E3B;
+$bg-contact: #CEC4BC;
+$bg-intro: #ECE7E4;
+$focus: #493421;
