--- a/css/blocks/_footer.scss
+++ b/css/blocks/_footer.scss
@@ -5,6 +5,7 @@ footer {
   font-size: 14px;
   line-height: 14px;
   color: $brown_text;
+  background-color: $bg-white;
 }
 .footer__logo {
   margin-bottom: 20px;
