--- a/css/blocks/_customers.scss
+++ b/css/blocks/_customers.scss
@@ -1,7 +1,7 @@
 @import "../base/variables";
 
 .customers {
-  background-color: #403E3B;
+  background-color: $bg-customers;
   padding: 100px 15px;
 }
 
@@ -16,7 +16,7 @@
 }
 
 .customers__title {
-  color: #FFFFFF;
+  color: $white;
   margin-bottom: 14px;
 }
 
