--- a/css/blocks/figcaption.scss
+++ b/css/blocks/figcaption.scss
@@ -17,7 +17,7 @@
 .figcaption__text {
   font-size: 17px;
   line-height: 17px;
-  cite {
+  span {
     font-size: 14px;
     line-height: 14px;
     color: $brown-text;
