--- a/css/blocks/intro.scss
+++ b/css/blocks/intro.scss
@@ -1,7 +1,7 @@
 @import "../base/variables";
 
 .intro {
-  background-color: #ECE7E4;
+  background-color: $bg-intro;
   position: relative;
   height: 100vh;
   .container {
