--- a/css/blocks/nav.scss
+++ b/css/blocks/nav.scss
@@ -12,7 +12,7 @@ nav {
         margin-right: 20px;
         transition: 0.3s;
         a {
-          color: #FFFFFF;
+          color: $white;
           background-color: $black;
           border-radius: 14px;
           padding: 11px 20px;
@@ -20,7 +20,7 @@ nav {
             background-color: $brown-text;
           }
           &:focus {
-            background-color: #493421;
+            background-color: $focus;
           }
         }
       }
