--- a/css/style.scss
+++ b/css/style.scss
@@ -19,3 +19,6 @@
 @import "./blocks/footer"; //footer
 @import "./blocks/social";
 @import "./blocks/customers";
+@import "./blocks/projects";
+@import "./blocks/previews";
+@import "./blocks/team";
