--- a/css/blocks/_previews.scss
+++ b/css/blocks/_previews.scss
@@ -1,8 +1,31 @@
 @import "../base/variables";
+@import "../base/mixins";
+
+.previews {
+  @include max-screen(768px) {
+    flex-direction: column;
+    align-items: center;
+  }
+}
 
 .preview {
   max-width: 375px;
   position: relative;
+  @include max-screen(1280px) {
+    margin-right: 15px;
+  }
+  @include max-screen(768px) {
+    margin-right: 0;
+    margin-bottom: 15px;
+  }
+  &:last-of-type {
+    @include max-screen(1280px) {
+      margin-right: 0;
+    }
+    @include max-screen(768px) {
+      margin-bottom: 0;
+    }
+  }
   img {
     display: block;
     width: 100%;
