--- a/css/blocks/contact.scss
+++ b/css/blocks/contact.scss
@@ -1,15 +1,25 @@
 @import "../base/variables";
+@import "../base/mixins";
 
 .contact {
-  padding: 100px 0;
+  padding: 100px 15px;
+  @include max-screen(768px) {
+    padding: 50px 15px;
+  }
   background-color: $bg-contact;
   .container {
     align-items: center;
+    @include max-screen(768px) {
+      flex-direction: column;
+    }
   }
 }
 
 .contact__text {
   max-width: 576px;
+  @include max-screen(768px) {
+    margin-bottom: 25px;
+  }
 }
 
 .contact__subtitle {
@@ -22,4 +32,7 @@
 
 .contact__title {
   font-size: 40px;
+  @include max-screen(428px) {
+    font-size: 30px;
+  }
 }
