--- a/css/blocks/intro.scss
+++ b/css/blocks/intro.scss
@@ -1,14 +1,21 @@
 @import "../base/variables";
+@import "../base/mixins";
 
 .intro {
   background-color: $bg-intro;
   position: relative;
   height: 100vh;
+  @include max-screen(992px) {
+    height: 720px;
+  }
   .container {
     max-width: $container-intro;
     height: 100vh;
     display: flex;
     align-items: center;
+    @include max-screen(992px) {
+      height: 720px;
+    }
   }
 }
 
@@ -21,4 +28,7 @@
   background-image: url("../img/intro/intro_bg.jpg");
   background-size: cover;
   background-position: center;
+  @include max-screen(835px) {
+    width: 100%;
+  }
 }
