--- a/css/blocks/nav.scss
+++ b/css/blocks/nav.scss
@@ -1,4 +1,5 @@
 @import "../base/variables";
+@import "../base/mixins";
 
 nav {
   ul {
@@ -25,5 +26,8 @@ nav {
         }
       }
     }
+  }
+  @include max-screen(884px) {
+    display: none;
   }
 }
