--- a/css/blocks/quote.scss
+++ b/css/blocks/quote.scss
@@ -1,9 +1,18 @@
 @import "../base/variables";
+@import "../base/mixins";
 
 .quote {
   padding: 100px 0;
+  @include max-screen(768px) {
+    padding: 50px 0;
+  }
   .container {
     max-width: $container-quote;
     padding: 0 15px;
+    @include max-screen(768px) {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
   }
 }
